# alert_manager

./: .gitignore  README.md  create_tables.py  pyproject.toml
.github/workflows/: cluster-test.yml  deploy-kubernetes.yml  publish-docker.yml  python-test.yml
doc/: hito1.md  hito2.md  hito3.md  hito4.md  hito5.md
doc/hito3/: app.md  domain.md  infrastructure.md  logger.md  middleware.md  test_container_detail.md  test_crud_detail.md  test_dags_detail.md  test_endpoints_detail.md  test_logging_detail.md  test_middleware_detail.md
doc/hito5/: AEMET_SETUP.md  CURL_EXAMPLES.md  ENTREGA_HITO5.md  KUBERNETES.md  PROMETHEUS_QUERIES.md  QUICKSTART.md
docker/: Dockerfile  Dockerfile.airflow  docker-compose.yml  requirements.txt
k8s/: configmap.yaml  kustomization.yaml  namespace.yaml  secrets.yaml
k8s/airflow/: airflow-dags-configmap.yaml  airflow-db.yaml  airflow-logs-pvc.yaml  scheduler.yaml  service.yaml  webserver.yaml
k8s/api/: deployment.yaml  ingress.yaml  service.yaml
k8s/observability/: dozzle.yaml  filebrowser.yaml  log-tester.yaml  node-exporter.yaml  prometheus.yaml  seq.yaml
k8s/postgres/: deployment.yaml  pvc.yaml  service.yaml
logs/: alert_manager.json  errors.json
src/: __init__.py  alerts_data.json  load_data.py  main.py  start.sh
src/app/: __init__.py  auth.py  crud.py  database.py  dependencies.py  extract_dgt_markers_production.py  main.py  models.py  schemas.py  wait_db.py
src/app/routers/: __init__.py  alerts.py
src/dags/: aemet_alerts_ingestion.py  data_checking.py  data_ingesting.py  dgt_traffic_ingestion.py
src/domain/: __init__.py  entities.py  exceptions.py  repositories.py  services.py
src/infraestructure/: __init__.py  logging.py
src/infrastructure/: __init__.py  logging.py  mappers.py  middleware.py  repositories.py  test_utils.py
tests/: __init__.py  conftest.py  test_aemet_integration.py  test_api.py  test_basic.py  test_container.py  test_crud.py  test_dags.py  test_endpoints.py  test_logging.py  test_middleware.py  test_pydantic.py  test_secrets.py
tests/logs/: alert_manager.json  errors.json
