[tool.poetry]
name = "alert_manager"
version = "0.1.0"
description = "Alert Management System"
authors = ["dmunozs14@correo.ugr.es"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-docker = "^2.0.0"
pytest-timeout = "^2.1.0"
requests = "^2.31.0"
sqlalchemy = ">=1.4.36,<2.0"
psycopg2-binary = "^2.9.9"
apache-airflow = "2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]